# Develop-AI

./: .dockerignore  .env.template  .gitignore  BrainAI.pyproj  BrainAI.sln  Dockerfile  README.md  config.local.yaml.template  config.yaml  config.yaml.template  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py  run_chat.py  run_daily.py  run_doc_improver.py  run_index.py  run_kusto_server.py  run_sync.py  run_tests.ps1  setup.ps1  setup.sh  test_hive_quality.py
brain_ai/: __init__.py  code_reader_llm.py  config.py  llm_client.py  startup.py
brain_ai/agents/: brain_agent.py  coder_agent.py  debug_agent.py  doc_improver_agent.py  knowledge_agent.py  knowledge_updater_agent.py
brain_ai/bot/: __init__.py  adapter.py  app.py  teams_bot.py
brain_ai/bot/teams_manifest/: manifest.json
brain_ai/cli/: chat.py  main.py
brain_ai/hive/: __init__.py  discovery_store.py  gateway.py  hive.py  registry.py  router.py  topic_extractor.py
brain_ai/kusto/: client.py  server.py
brain_ai/sync/: devops_pr.py  repo_sync.py
brain_ai/vectorstore/: code_indexer.py  indexer.py
deploy/: deploy.ps1  main.bicep  parameters.json
scripts/: run_chat.py  run_code_index.py  run_daily.py  run_hive_index.py
tests/: test_agents.py  test_basics.py  test_brain_agent.py  test_config.py  test_devops_pr.py  test_doc_gap.py  test_hive.py  test_indexer.py  test_llm_client.py  test_mcp.py
