[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BCDR-devai"
version = "0.1.0"
description = "BCDR DeveloperAI - Multi-agent AI assistant for Azure Backup Management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "azure-kusto-data>=4.3.0",
    "azure-identity>=1.15.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "gitpython>=3.1.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
teams = [
    "botbuilder-core>=4.16.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
BCDR-devai-chat = "brain_ai.cli.chat:run_chat"
BCDR-devai-kusto = "brain_ai.kusto.server:main"
BCDR-devai-bot = "brain_ai.bot.app:run"

[tool.setuptools.packages.find]
include = ["brain_ai*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
